project (UQTk)

enable_language(Fortran)

add_subdirectory (array   )
add_subdirectory (tools   )
add_subdirectory (quad    )
add_subdirectory (pce     )
add_subdirectory (kle     )
add_subdirectory (bcs     )
add_subdirectory (mcmc    )
add_subdirectory (tmcmc   )
add_subdirectory (xmlutils)
add_subdirectory (lreg    )
add_subdirectory (gproc   )
add_subdirectory (sampling)
add_subdirectory (infer   )
add_subdirectory (lowrank )
add_subdirectory (include )

if ("${DFI}" STREQUAL "ON")
	add_subdirectory (dfi)
endif()

include_directories (include)
include_directories (array)
include_directories (tools)
include_directories (quad)
include_directories (pce)
include_directories (bcs)
include_directories (lreg)
include_directories (gproc)
include_directories (mcmc)
include_directories (tmcmc)
include_directories (sampling)
include_directories (infer)
include_directories (lowrank)

include_directories (../../dep/slatec)
include_directories (../../dep/dsfmt)
include_directories (../../dep/lbfgs )
include_directories (../../dep/ann )
include_directories (../../dep/figtree )
include_directories (../../dep/cvode-2.7.0/include)
include_directories("${PROJECT_BINARY_DIR}/../../dep/cvode-2.7.0/include")

FILE(GLOB arraysrc "array/*.cpp")
FILE(GLOB toolssrc "tools/*.cpp" "tools/*.f")
FILE(GLOB quadsrc "quad/*.cpp")
FILE(GLOB pcesrc "pce/*.cpp")
FILE(GLOB klesrc "kle/*.cpp")
FILE(GLOB bcssrc "bcs/*.cpp")
FILE(GLOB mcmcsrc "mcmc/*.cpp")
FILE(GLOB tmcmcsrc "tmcmc/*.cpp")
FILE(GLOB lregsrc "lreg/*.cpp")
FILE(GLOB gprocsrc "gproc/*.cpp")
FILE(GLOB lowranksrc "lowrank/*.cpp")
FILE(GLOB xmlutilssrc "xmlutils/*.cpp")
FILE(GLOB samplingsrc "sampling/lhs.cpp sampling/qmc.cpp")
if ("${INTEL-GROVER}" STREQUAL "")
  FILE(GLOB infersrc "infer/*.cpp")
endif()
add_library(uqtk ${arraysrc} ${toolssrc} ${quadsrc} ${pcesrc} ${klesrc} ${bcssrc} ${tmcmcsrc} ${mcmcsrc} ${mcmcsrc2} ${lregsrc} ${gprocsrc} ${xmlutilssrc} ${infersrc} ${samplingsrc} ${lowranksrc})
INSTALL(TARGETS uqtk DESTINATION lib)
