project (UQTk)

enable_language(Fortran)

add_subdirectory (array   )
add_subdirectory (tools   )
add_subdirectory (quad    )
add_subdirectory (pce     )
add_subdirectory (kle     )
add_subdirectory (bcs     )
add_subdirectory (mcmc    )
add_subdirectory (amcmc   )
add_subdirectory (ss      )
add_subdirectory (mala    )
#add_subdirectory (mmala   )
add_subdirectory (tmcmc   )
add_subdirectory (tmcmcClass)
add_subdirectory (xmlutils)
add_subdirectory (lreg    )
add_subdirectory (gproc   )
add_subdirectory (sampling)
add_subdirectory (infer   )
add_subdirectory (lowrank )
add_subdirectory (dfi )
add_subdirectory (include )

#if ("${DFI}" STREQUAL "ON")
#	add_subdirectory (dfi)
#endif()

include_directories (include)
include_directories (array)
include_directories (tools)
include_directories (quad)
include_directories (pce)
include_directories (bcs)
include_directories (lreg)
include_directories (gproc)
include_directories (mcmc)
include_directories (mala)
#include_directories (mmala)
include_directories (amcmc)
include_directories (ss)
include_directories (tmcmc)
include_directories (tmcmcClass)
include_directories (sampling)
include_directories (infer)
include_directories (lowrank)
include_directories (dfi)

include_directories (../../dep/slatec)
include_directories (../../dep/dsfmt)
include_directories (../../dep/lbfgs )
include_directories (../../dep/ann )
include_directories (../../dep/figtree )

if(BUILD_SUNDIALS)
	include_directories (../../dep/sundials/include )
	include_directories ("${PROJECT_BINARY_DIR}/../../dep/sundials/include")
endif()
include_directories (${CMAKE_SUNDIALS_DIR}/include)

FILE(GLOB arraysrc "array/*.cpp")
FILE(GLOB toolssrc "tools/*.cpp" "tools/*.f")
FILE(GLOB quadsrc "quad/*.cpp")
FILE(GLOB pcesrc "pce/*.cpp")
FILE(GLOB klesrc "kle/*.cpp")
FILE(GLOB bcssrc "bcs/*.cpp")
FILE(GLOB mcmcsrc "mcmc/*.cpp")
FILE(GLOB malasrc "mala/*.cpp")
#FILE(GLOB mmalasrc "mmala/*.cpp")
FILE(GLOB amcmcsrc "amcmc/*.cpp")
FILE(GLOB sssrc "ss/*.cpp")
FILE(GLOB tmcmcsrc "tmcmc/*.cpp")
FILE(GLOB tmcmcClasssrc "tmcmcClass/*.cpp")
FILE(GLOB lregsrc "lreg/*.cpp")
FILE(GLOB gprocsrc "gproc/*.cpp")
FILE(GLOB lowranksrc "lowrank/*.cpp")
FILE(GLOB dfi "dfi/*.cpp")
FILE(GLOB xmlutilssrc "xmlutils/*.cpp")
FILE(GLOB samplingsrc "sampling/lhs.cpp sampling/qmc.cpp")
if ("${INTEL-GROVER}" STREQUAL "")
  FILE(GLOB infersrc "infer/*.cpp")
endif()
add_library(uqtk ${arraysrc} ${toolssrc} ${quadsrc} ${pcesrc} ${klesrc} ${bcssrc} ${tmcmcsrc} ${tmcmcClasssrc} ${sssrc} ${mcmcsrc} ${malasrc} ${amcmcsrc} ${mcmcsrc2} ${lregsrc} ${gprocsrc} ${xmlutilssrc} ${infersrc} ${samplingsrc} ${lowranksrc} ${dfi})
INSTALL(TARGETS uqtk DESTINATION lib)
